--- a/app/index.html
+++ b/app/index.html
@@ -69,7 +69,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p>with <span class="glyphicon glyphicon-heart"></span> from Bansko</p>
       </div>
     </div>
 
