--- a/app/index.html
+++ b/app/index.html
@@ -96,6 +96,8 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/marked/lib/marked.js"></script>
+    <script src="bower_components/angular-marked/dist/angular-marked.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -103,6 +105,9 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/tag.js"></script>
+        <script src="scripts/controllers/business.js"></script>
+        <script src="scripts/services/businessapi.js"></script>
         <!-- endbuild -->
 </body>
 </html>
