--- a/app/index.html
+++ b/app/index.html
@@ -48,15 +48,15 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">directory</a>
+            <a class="navbar-brand" href="/#!/">bansko directory</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li class="active"><a href="/#!/">Home</a></li>
+              <li><a ng-href="/#!/about">About</a></li>
+              <li><a ng-href="/#!/contact">Contact</a></li>
             </ul>
           </div>
         </div>
