--- a/app/index.html
+++ b/app/index.html
@@ -108,6 +108,7 @@
         <script src="scripts/controllers/tag.js"></script>
         <script src="scripts/controllers/business.js"></script>
         <script src="scripts/services/businessapi.js"></script>
+        <script src="scripts/services/util.js"></script>
         <!-- endbuild -->
 </body>
 </html>
