--- a/app/index.html
+++ b/app/index.html
@@ -40,19 +40,18 @@
       <div class="navbar navbar-default" role="navigation">
         <div class="container">
           <div class="navbar-header">
-
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-
-            <a class="navbar-brand" href="/#!/">bansko directory</a>
+            <a class="navbar-brand" href="/#!/">
+              <img src="images/banskodirectory-32x32.png" />
+              bansko directory
+            </a>
           </div>
-
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
+          <div class="collapse navbar-collapse pull-right" id="js-navbar-collapse">
             <ul class="nav navbar-nav">
               <li class="active"><a href="/#!/">Home</a></li>
               <li><a ng-href="/#!/about">About</a></li>
