--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html>
-  <head>
+  <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
+    <meta property="fb:app_id" content="banskodirectory" /> 
+    <meta property="og:type"   content="website" /> 
+    <meta property="og:url"    content="https://banskodirectory.com/" /> 
+    <meta property="og:title"  content="Bansko Directory" /> 
+    <meta property="og:image"  content="https://raw.githubusercontent.com/bansko/directory/master/directory/vasilashki-lakes.jpg" />
     <meta charset="utf-8">
     <title></title>
     <meta name="description" content="">
