--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
+    <meta property="fb:app_id" content="447329762364798" />
     <meta property="og:type"   content="website" />
     <meta property="og:url"    content="https://banskodirectory.com/" />
     <meta property="og:title"  content="Bansko Directory" />
