--- a/app/index.html
+++ b/app/index.html
@@ -113,6 +113,7 @@
         <script src="scripts/controllers/business.js"></script>
         <script src="scripts/services/businessapi.js"></script>
         <script src="scripts/services/util.js"></script>
+        <script src="scripts/controllers/privacy.js"></script>
         <!-- endbuild -->
 </body>
 </html>
