--- a/app/index.html
+++ b/app/index.html
@@ -84,8 +84,7 @@
        (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
        r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
        }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-       ga('create', 'UA-XXXXX-X');
+       ga('create', 'UA-118900941-1');
        ga('send', 'pageview');
     </script>
 
